# breachpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  breach.py  pyproject.toml
src/breachpy/: main.py
src/breachpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
